backwards feature selection subheader
credited backwards feature selection code to Dr Aksakalli of RMIT University

--- a/index.html
+++ b/index.html
@@ -13616,7 +13616,7 @@ height=281
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Backwards-feature-selection">Backwards feature selection<a class="anchor-link" href="#Backwards-feature-selection">&#182;</a></h3>
+<h3 id="Backwards-feature-selection">Backwards feature selection<a class="anchor-link" href="#Backwards-feature-selection">&#182;</a></h3><p>Note that this backwards feature selection code was written by Dr Vural Aksakalli of RMIT University</p>
 </div>
 </div>
 </div>
