--- a/index.html
+++ b/index.html
@@ -11790,7 +11790,7 @@ div#notebook {
 <li><a href="#Data-Preparation">Data Preparation</a> section covers data cleaning and data preparation steps. </li>
 <li><a href="#Data-Exploration">Data Exploration</a> section explores dataset features and their inter-relationships.</li>
 <li><a href="#Statistical-Modeling-and-Performance-Evaluation">Statistical Modeling and Performance Evaluation</a> section first fits a full multiple linear regression model and performs diagnostic checks. Next, we perform backwards variable selection using p-values to obtain a reduced model, after which we perform another set of diagnostic checks on the reduced model.</li>
-<li><a href="#Summary-and-Conclusions">Summary and Conclusions</a> section provides a summary of our work and presents our findings.</li>
+<li><a href="#Summary-and-Conclusions">Summary and Conclusions</a> section provides a summary of the work and presents any findings.</li>
 </ul>
 
 </div>
