--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8">
   <title>YouTube Playlist Generator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap 5 CSS -->
+  <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
   <style>
     body {
       padding: 2rem;
@@ -15,17 +13,22 @@
     textarea {
       resize: vertical;
     }
-    .playlist a {
-      word-break: break-word;
+    .playlist-button {
+      margin: 0.25rem 0.25rem 0.25rem 0;
+      border-radius: 2rem;
+    }
+    .form-switch-label {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      margin-top: 1rem;
     }
   </style>
 </head>
 <body>
-
   <div class="container">
     <h1 class="mb-3">🎥 YouTube Playlist Generator</h1>
 
-    <!-- Instruction Box -->
     <div class="alert alert-info">
       <h5 class="alert-heading">Instructions</h5>
       <p><strong>Step 1.</strong> Get the HTML or text that contains the links you want to add to a playlist. On Chrome browser this should look something like:</p>
@@ -44,29 +47,44 @@
         If you're using Chrome, and you want to add these anonymous playlists to your own YouTube playlists, you'll need an extension like 
         <a href="https://chromewebstore.google.com/detail/multiselect-for-youtube/gpgbiinpmelaihndlegbgfkmnpofgfei?hl=en" target="_blank">
           Multiselect for YouTube
-        </a>. This lets you select all videos and save them to your own playlist (if you're logged into YouTube).
-        Similar extensions likely exist for Firefox and other browsers—feel free to explore!
+        </a>.
       </p>
     </div>
 
-    <!-- Text Input -->
     <div class="mb-3">
       <label for="htmlInput" class="form-label">Paste HTML or text below:</label>
       <textarea id="htmlInput" class="form-control" rows="8" placeholder="Paste your HTML or text here..."></textarea>
     </div>
 
-    <!-- Generate Button -->
-    <button class="btn btn-primary" onclick="generatePlaylists()">Generate Playlist Link(s)</button>
+    <button class="btn btn-primary mb-3" onclick="generatePlaylists()">Generate Playlist Link(s)</button>
 
-    <!-- Output Results -->
+    <!-- Export Mode Toggle -->
+    <div class="form-check form-switch form-switch-label">
+      <input class="form-check-input" type="checkbox" id="exportModeToggle">
+      <label class="form-check-label" for="exportModeToggle">
+        Export Mode: <strong id="exportModeLabel">All Video Links</strong>
+      </label>
+    </div>
+
     <div id="results" class="mt-4 playlist"></div>
   </div>
 
-  <!-- JavaScript -->
   <script>
+    let currentIds = [];
+    let currentPlaylists = [];
+
+    document.getElementById('exportModeToggle').addEventListener('change', () => {
+      const label = document.getElementById('exportModeLabel');
+      label.textContent = exportMode() === 'videos' ? 'All Video Links' : 'Playlist Links';
+    });
+
+    function exportMode() {
+      return document.getElementById('exportModeToggle').checked ? 'playlists' : 'videos';
+    }
+
     function extractYouTubeUrls(text) {
       const pattern = /(https?:\/\/(?:www\.)?(?:youtube\.com\/watch\?v=[\w\-]+|youtu\.be\/[\w\-]+))/g;
-      return [...new Set(text.match(pattern) || [])]; // Remove duplicates
+      return [...new Set(text.match(pattern) || [])];
     }
 
     function extractVideoId(url) {
@@ -77,10 +95,9 @@
         } else if (u.hostname.includes('youtu.be')) {
           return u.pathname.slice(1);
         }
-      } catch (e) {
+      } catch {
         return null;
       }
-      return null;
     }
 
     function chunkArray(arr, size) {
@@ -96,34 +113,72 @@
       const urls = extractYouTubeUrls(input);
       const ids = urls.map(extractVideoId).filter(Boolean);
       const chunks = chunkArray(ids, 50);
+      const playlistLinks = chunks.map(chunk => `https://www.youtube.com/watch_videos?video_ids=${chunk.join(",")}&disable_polymer=true`);
+
+      currentIds = ids;
+      currentPlaylists = playlistLinks;
 
       const resultsDiv = document.getElementById("results");
       resultsDiv.innerHTML = "";
 
-      if (chunks.length === 0) {
+      if (ids.length === 0) {
         resultsDiv.innerHTML = `<div class="alert alert-warning mt-3">No valid YouTube links found.</div>`;
         return;
       }
 
-      const listGroup = document.createElement("div");
-      listGroup.className = "list-group";
+      const header = document.createElement("p");
+      header.innerHTML = `<strong>Total unique YouTube links found: ${ids.length}</strong>`;
+      resultsDiv.appendChild(header);
 
-      chunks.forEach((chunk, index) => {
-        const playlistUrl = `https://www.youtube.com/watch_videos?video_ids=${chunk.join(",")}&disable_polymer=true`;
-        const link = document.createElement("a");
-        link.href = playlistUrl;
-        link.target = "_blank";
-        link.className = "list-group-item list-group-item-action";
-        link.textContent = `Playlist ${index + 1}`;
-        listGroup.appendChild(link);
+      // Playlist buttons
+      playlistLinks.forEach((url, index) => {
+        const btn = document.createElement("a");
+        btn.href = url;
+        btn.target = "_blank";
+        btn.className = "btn btn-success playlist-button";
+        btn.textContent = `Playlist ${index + 1} (${chunks[index].length} links)`;
+        resultsDiv.appendChild(btn);
       });
 
-      resultsDiv.appendChild(listGroup);
+      // Export buttons
+      const exportDiv = document.createElement("div");
+      exportDiv.className = "mt-4";
+
+      const exportTxtBtn = document.createElement("button");
+      exportTxtBtn.className = "btn btn-outline-secondary me-2";
+      exportTxtBtn.textContent = "Export as .txt";
+      exportTxtBtn.onclick = () => exportData('txt');
+
+      const exportCsvBtn = document.createElement("button");
+      exportCsvBtn.className = "btn btn-outline-secondary";
+      exportCsvBtn.textContent = "Export as .csv";
+      exportCsvBtn.onclick = () => exportData('csv');
+
+      exportDiv.appendChild(exportTxtBtn);
+      exportDiv.appendChild(exportCsvBtn);
+      resultsDiv.appendChild(exportDiv);
+    }
+
+    function exportData(type) {
+      const mode = exportMode();
+      const content = mode === 'videos' ? currentIds : currentPlaylists;
+      const delimiter = type === 'csv' ? ',' : '\n';
+      const text = content.join(delimiter);
+      const filename = mode === 'videos'
+        ? `youtube_links.${type}`
+        : `youtube_playlists.${type}`;
+      downloadText(text, filename);
+    }
+
+    function downloadText(text, filename) {
+      const blob = new Blob([text], { type: 'text/plain' });
+      const link = document.createElement('a');
+      link.download = filename;
+      link.href = URL.createObjectURL(blob);
+      link.click();
     }
   </script>
 
-  <!-- Bootstrap 5 JS (Optional) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
