More export list functionality

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="mb-3">🎥 YouTube Playlist Generator</h1>
+    <h1 class="mb-3">HTML to YouTube Playlist generator</h1>
 
     <div class="alert alert-info">
       <h5 class="alert-heading">Instructions</h5>
-      <p><strong>Step 1.</strong> Get the HTML or text that contains the links you want to add to a playlist. On Chrome browser this should look something like:</p>
+      <p><strong>Step 1.</strong> Copy the HTML or text that contains the links you want to add to a playlist. If you're using Chrome and you're browsing a webpage like a RateYourMusic list with a bunch of songs hyperlinked, this should look something like:</p>
       <ul>
         <li>Right click → <strong>View Page Source</strong></li>
         <li>Select All (<kbd>Ctrl</kbd>+<kbd>A</kbd>)</li>
@@ -48,6 +48,7 @@
         <a href="https://chromewebstore.google.com/detail/multiselect-for-youtube/gpgbiinpmelaihndlegbgfkmnpofgfei?hl=en" target="_blank">
           Multiselect for YouTube
         </a>.
+        which will allow you to select all the videos in the playlist and add them to your own playlist if you're logged in to a YouTube account. Similar extensions likely exist for Firefox and other browsers. I'll leave this part with you to figure out.
       </p>
     </div>
 
