--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
       gap: 0.5rem;
       margin-top: 1rem;
     }
+    .drop-zone {
+      border: 2px dashed #6c757d;
+      border-radius: 1rem;
+      padding: 2rem;
+      text-align: center;
+      color: #6c757d;
+      margin-bottom: 1rem;
+      transition: background-color 0.2s ease-in-out;
+    }
+    .drop-zone.dragover {
+      background-color: #f8f9fa;
+    }
+
   </style>
 </head>
 <body>
@@ -52,8 +65,10 @@
       </p>
     </div>
 
+    <div id="dropZone" class="drop-zone">Drag & drop a .html or .txt file here</div>
+
     <div class="mb-3">
-      <label for="htmlInput" class="form-label">Paste HTML or text below:</label>
+      <label for="htmlInput" class="form-label">Or paste HTML or text below:</label>
       <textarea id="htmlInput" class="form-control" rows="8" placeholder="Paste your HTML or text here..."></textarea>
     </div>
 
@@ -131,7 +146,6 @@
       header.innerHTML = `<strong>Total unique YouTube links found: ${ids.length}</strong>`;
       resultsDiv.appendChild(header);
 
-      // Playlist buttons
       playlistLinks.forEach((url, index) => {
         const btn = document.createElement("a");
         btn.href = url;
@@ -141,7 +155,6 @@
         resultsDiv.appendChild(btn);
       });
 
-      // Export buttons
       const exportDiv = document.createElement("div");
       exportDiv.className = "mt-4";
 
@@ -178,6 +191,37 @@
       link.href = URL.createObjectURL(blob);
       link.click();
     }
+
+    // Drag & Drop File Support
+    const dropZone = document.getElementById('dropZone');
+    dropZone.addEventListener('dragover', (e) => {
+      e.preventDefault();
+      dropZone.classList.add('dragover');
+    });
+
+    dropZone.addEventListener('dragleave', () => {
+      dropZone.classList.remove('dragover');
+    });
+
+    dropZone.addEventListener('drop', (e) => {
+      e.preventDefault();
+      dropZone.classList.remove('dragover');
+
+      const file = e.dataTransfer.files[0];
+      if (!file) return;
+
+      const validTypes = ['text/plain', 'text/html'];
+      if (!validTypes.includes(file.type)) {
+        alert('Only .html or .txt files are supported.');
+        return;
+      }
+
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        document.getElementById('htmlInput').value = e.target.result;
+      };
+      reader.readAsText(file);
+    });
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
